tests/specs/run/error_for_await/error_for_await.ts.out
[WILDCARD]
TS1103 [ERROR]: 'for await' loops are only allowed within async functions and at the top levels of modules.
  for await (const event of httpConn) {
      ~~~~~
    at [WILDCARD]error_for_await.ts:9:7

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
